--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <i class="icofont-phone"></i> +97430019321
       </div>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="www.twitter.com" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="www.facebook.com" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="#" class="skype"><i class="icofont-skype"></i></a>
         <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
@@ -62,8 +62,12 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="services.html">Services</a></li>
+          <li class="active"><a href="portfolio.html">Portfolio</a></li>
+          <li class="active"><a href="contact.html">Contact</a></li>
+          <li class="active"><a href="about.html">About us</a></li>
 
-          <li class="drop-down"><a href="#">About</a>
+         <!-- <li class="drop-down"><a href="#">About</a>
             <ul>
               <li><a href="about.html">About Us</a></li>
              
@@ -73,7 +77,7 @@
           
           <li><a href="contact.html">Contact</a></li>
 
-        </ul>
+        </ul>-->
       </nav><!-- .nav-menu -->
 
     </div>
