--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="social-links">
         <a href="https://www.twitter.com" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://www.facebook.com" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="http://www.facebook.com" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="https://www.skype.com" class="skype"><i class="icofont-skype"></i></a>
         <a href="https://www.linkedin.com" class="linkedin"><i class="icofont-linkedin"></i></i></a>
