--- a/services.html
+++ b/services.html
@@ -45,11 +45,11 @@
         <i class="icofont-phone"></i> +97430019321
       </div>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://www.twitter.com" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://www.facebook.com" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.skype.com" class="skype"><i class="icofont-skype"></i></a>
+        <a href="https://www.linkedin.com" class="linkedin"><i class="icofont-linkedin"></i></i></a>
       </div>
     </div>
   </section>
