--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="carousel-item active" style="background: url(assets/img/slide/slide-1.jpg)">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Welcome to <span>Kurupz entrepreneurship</span></h2>
+                <h2 class="animated fadeInDown">Welcome to <span>Kurupz </span></h2>
                 <p class="animated fadeInUp">I am 10+ years experience in automobile industry The automotive industry is a term that covers a wide range of companies and organisations involved in the design, development, manufacture, marketing, and selling of motor vehicles, towed vehicles, motorcycles and mopeds. It is one of the world's most important economic sectors by revenue..</p>
                 <a href="" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
