--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <div class="container d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>kurupz entrepreneur</span></a></h1>
+        <!--<h1 class="text-light"><a href="index.html"><span>kurupz entrepreneur</span></a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+         <a href="index.html"><img src="assets/img/logo.PNG" alt="" class="img-fluid"> <span>kurupz</span></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
