--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background: url(assets/img/slide/slide-1.jpg)">
+          <div class="carousel-item active" style="background: url(assets/img/slide/slide-1.JPG)">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animated fadeInDown">Welcome to <span>Kurupz </span></h2>
